// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Spacer Margin 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
    >
      <div
        className="Avatar__Circle-sc-1wtet2j-3 kNqfAA"
      >
        AL
      </div>
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
        >
          <div
            href="#"
          >
            Ayden Lundgre
          </div>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          <div
            href="#"
          >
            Ayden Lundgre
          </div>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Spacer Padding 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 iWLNmm"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 iWLNmm"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
    >
      <div
        className="Avatar__Circle-sc-1wtet2j-3 kNqfAA"
      >
        AL
      </div>
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 iWLNmm"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
        >
          <div
            href="#"
          >
            Ayden Lundgre
          </div>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 iWLNmm"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 iWLNmm"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          <div
            href="#"
          >
            Ayden Lundgre
          </div>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
]
`;
